<resources>
    <string name="app_name">LetsGetKnotty</string>
    <string name="action_settings">Settings</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="quote">Quote</string>
    <string name="movie">Movie</string>
    <string name="clear_quote">Clear quote</string>
    <string name="clear_condensed">Clear</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this quote?</string>
    <string name="dialog_which_settings_title">Which settings do you want?</string>
    <string-array name="settings_types">
        <item>Sound</item>
        <item>Search</item>
        <item>General</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_edit_dialog_hint_quote">Enter quote</string>
    <string name="add_edit_dialog_hint_movie">Enter movie</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="add_pattern">Add Pattern</string>
    <string name="add_row_counter">Add Row Counter</string>
    <string name="projects">Projects</string>
    <string name="add_project">Add Project</string>
    <string name="note">Note:</string>
    <string name="add_note">Add Note</string>
    <string name="gauge_4_in_x_4in">Gauge (4 in x 4in):</string>
    <string name="add_gauge">Add Gauge</string>
    <string name="login_prompt">Welcome! Who are you?</string>
    <string name="color">Color</string>
    <string name="create_pattern_title">Create Pattern</string>
    <string name="stitch">Stitch</string>
    <string name="pattern_fragment">Pattern Fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="rows_completed">Rows Completed</string>
    <string name="project_width_inches">Project Width (inches)</string>
    <string name="project_height_inches">Project Height (inches)</string>
    <string name="number_of_stitches_in_a_row">Number of Stitches in a Row</string>
    <string name="note_title">Note:</string>
    <string name="pattern_name">Pattern name</string>
    <string name="number_of_rows_in_repeat">Number of Rows in Repeat</string>
    <string name="number_of_stitches_in_repeat">Number of Stitches in Repeat</string>
    <string name="total_number_of_rows_in_pattern">Total Number of Rows in Pattern</string>
    <string name="total_number_of_stitches_in_pattern">Total Number of Stitches in Pattern</string>
    <string name="counter_name">Counter name</string>
    <string name="starting_value">Starting Value</string>
    <string name="login_button">Login Button</string>
    <string name="_0">0</string>
    <string name="row_counter">Row Counter:</string>
    <string name="calculate_yards_required">Calculate Yards Required</string>
    <string name="calculate">Calculate</string>
    <string name="yards_per_skein">Yards Per Skein</string>
    <string name="yards_used">Yards Used</string>
    <string name="pattern_width_inch">Pattern Width (inch)</string>
    <string name="pattern_height_inch">Pattern Height (inch)</string>
    <string name="desired_width_inch">Desired Width (inch)</string>
    <string name="desired_height_inch">Desired Height (inch)</string>
    <string name="estimated_yards_required">Estimated Yards Required:</string>
</resources>