<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rows_completed"/>

            <EditText
                android:id="@+id/rows_completed_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_width_inches"/>

            <EditText
                android:id="@+id/project_width_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_height_inches"/>

            <EditText
                android:id="@+id/project_height_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_stitches_in_a_row"/>

            <EditText
                android:id="@+id/project_stitch_count_edit_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>