<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    >

    <TextView
        android:id="@+id/create_pattern_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/create_pattern_title"
        style="@style/SectionTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/pattern_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/create_pattern_title"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Pattern Name"
        style="@style/SectionSubtitle"
        />

    <LinearLayout
        android:id="@+id/color_stitch_selectors"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/create_pattern_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/choose_color_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:layout_marginEnd="70dp"
            style="@style/SectionSubtitle"
            />

        <Button
            android:id="@+id/choose_stitch_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="2dp"
            android:foreground="@drawable/ic_stitch_purl_black"
            android:backgroundTint="@android:color/darker_gray"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stitch"
            style="@style/SectionSubtitle"
            />

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/create_pattern_grid_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_stitch_selectors"
            app:layout_constraintBottom_toTopOf="@id/cancel_create_pattern"
            app:layout_constrainedHeight="true"
            android:scrollbars="horizontal"
            />

    <Button
        android:id="@+id/cancel_create_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_create_pattern"
        android:text="@string/cancel"
        android:backgroundTint="@color/colorAccentLight"
        />

    <Button
        android:id="@+id/add_create_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_create_pattern"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add"
        android:backgroundTint="@color/colorAccentLight"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
